Tests/CarlTests/CompilerTests/negative/unknown-neighborhood.carl
automaton GameOfLife {
    world {
        states { Dead, Alive }
        neighborhood: Unknown(1)
        dimension: 2
    }

    rules {
        Dead -> Alive when count_neighbors(Alive) == 3
        Alive -> Dead when count_neighbors(Alive) < 2 or count_neighbors(Alive) > 3
    }
}
